src/objects/Propensity_Score_Management__mdt.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Span_Begin__c</fullName>
        <label>Time Span Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Span_End__c</fullName>
        <label>Time Span End</label>
        <type>Date</type>
    </fields>
    <label>Propensity Score Management</label>
    <pluralLabel>Propensity Score Management</pluralLabel>
</CustomObject>